--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,15 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile 'com.vk.api:sdk:0.5.6'
+    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.7'
+    compile 'org.apache.logging.log4j:log4j-api:2.7'
+    compile 'org.apache.logging.log4j:log4j-core:2.7'
 }
 
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.9"
+    kotlinOptions.jvmTarget = "1.8"
 }
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.9"
+    kotlinOptions.jvmTarget = "1.8"
 }
