--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.7'
     compile 'org.apache.logging.log4j:log4j-api:2.7'
     compile 'org.apache.logging.log4j:log4j-core:2.7'
+    compile 'net.sourceforge.htmlunit:htmlunit:2.29'
 }
 
 compileKotlin {
