Improve CLI, make password hidden

--- a/build.gradle
+++ b/build.gradle
@@ -33,3 +33,12 @@ compileKotlin {
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'd.kh.vk.PhotoLoaderKt'
+    }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
